<resources>
    <string name="app_name">MovieCatalogue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="date">Release Date</string>
    <string name="image">Image</string>
    <string name="error_massage">Please Check Your Internet Connection</string>
    <string name="change_language">Change Language</string>
    <string name="movies">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="overview">Overview</string>
    <string name="description">Description</string>
    <string name="background">Image Background</string>
    <string name="favorite">+Favorite</string>
    <string name="favorite_movie">Favorite Movie</string>
    <string name="favorite_tv_show">Favorite TV Show</string>
    <string name="remove_favorit">Remove Favorit</string>
    <string name="search">Search</string>
    <string name="search_hint">Input Word</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="no_data">No Data</string>
    <string name="release_reminder">Release Reminder</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="release_desc">\t Reminder showing the movie that \n released today</string>
    <string name="daily_desc">\t Reminder movie everyday</string>
    <string name="reminder_settings">Reminder Settings</string>
</resources>
