<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.DetailActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/img_background"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:background="@color/colorAccent"
            android:scaleType="fitXY"
            android:contentDescription="@string/background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_post"
            android:layout_width="155dp"
            android:layout_height="230dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="160dp"
            android:background="@color/colorPrimaryDark"
            android:scaleType="fitXY"
            android:contentDescription="@string/image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="250dp"
            android:shadowColor="#000"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="4.6"
            android:text="@string/title"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="250dp"
            android:shadowColor="#000"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="4.6"
            android:text="@string/title"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_date_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:layout_marginLeft="180dp"
            android:shadowColor="#000"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="4.6"
            android:text="@string/date"
            android:textColor="@color/colorAccent"
            android:textSize="28sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_detail" />

        <TextView
            android:id="@+id/overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="400dp"
            android:text="@string/overview"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:padding="10dp"
            android:text="@string/description"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/overview"
            app:layout_constraintTop_toBottomOf="@id/overview" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_favorite"
            android:text="@string/favorite"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/tv_description"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_delete"
            android:text="@string/remove_favorit"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/btn_favorite"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>