<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginLeft="8dp"
    android:padding="8dp">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="160dp"
        android:id="@+id/img_photo"
        android:scaleType="fitXY"
        android:contentDescription="@string/image"
        android:background="@color/colorAccent2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_title_favorite"
        android:layout_toEndOf="@id/img_photo"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="5dp"
        android:text="@string/title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_toRightOf="@id/img_photo"
        android:layout_marginStart="14dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_name_favorite"
        android:layout_toEndOf="@id/img_photo"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="5dp"
        android:text="@string/title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_toRightOf="@id/img_photo"
        android:layout_marginStart="14dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_date_favorite"
        android:layout_marginLeft="@dimen/action_horizontal_margin"
        android:text="@string/date"
        android:textSize="22sp"
        android:textStyle="italic"
        android:layout_marginStart="@dimen/action_horizontal_margin"
        android:layout_below="@id/tv_title_favorite"
        android:layout_toRightOf="@id/img_photo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_desc_favorite"
        android:layout_marginLeft="@dimen/action_horizontal_margin"
        android:layout_marginTop="10dp"
        android:text="@string/description"
        android:textSize="15sp"
        android:maxLines="3"
        android:ellipsize="end"
        android:layout_marginStart="@dimen/action_horizontal_margin"
        android:layout_below="@id/tv_date_favorite"
        android:layout_toRightOf="@id/img_photo" />

</RelativeLayout>