<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.RemindActivity">

    <TextView
        android:id="@+id/release"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/action_vertical_margin"
        android:layout_marginEnd="171dp"
        android:layout_marginRight="171dp"
        android:layout_marginBottom="8dp"
        android:text="@string/release_reminder"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="@dimen/action_vertical_margin"
        app:layout_constraintBottom_toTopOf="@+id/release_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/release_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="165dp"
        android:layout_marginRight="165dp"
        android:layout_marginBottom="16dp"
        android:text="@string/release_desc"
        android:textSize="16sp"
        android:textStyle="italic"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/daily_reminder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/release" />

    <TextView
        android:id="@+id/daily_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/action_vertical_margin"
        android:layout_marginEnd="273dp"
        android:layout_marginRight="273dp"
        android:layout_marginBottom="8dp"
        android:padding="@dimen/action_vertical_margin"
        android:text="@string/daily_reminder"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/daily_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/release_desc" />

    <TextView
        android:id="@+id/daily_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="222dp"
        android:layout_marginRight="222dp"
        android:layout_marginBottom="416dp"
        android:text="@string/daily_desc"
        android:textSize="16sp"
        android:textStyle="italic"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/daily_reminder" />

    <Switch
        android:id="@+id/upcoming_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toRightOf="@id/release_desc"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/daily_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="140dp"
        app:layout_constraintLeft_toRightOf="@id/daily_desc"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>